First working version

--- a/manifest.yml
+++ b/manifest.yml
@@ -9,6 +9,10 @@
 #   python:
 #     - requests
 #     - gensim
+ dependencies:
+   # Pip dependencies on PyPI
+   python:
+     - pybotvac
 #
 #   # Install packages with the system package manager
 #   # This searches for the provided executable and uses the package names
