Adapted manifest for python 3.6 and web update of credentials

--- a/manifest.yml
+++ b/manifest.yml
@@ -12,6 +12,7 @@
  dependencies:
    # Pip dependencies on PyPI
    python:
+     - dataclasses
      - pybotvac
 #
 #   # Install packages with the system package manager
